--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 
 header{
     width: auto;
-    height: auto;
+    height: 5rem;
     padding: 0 1rem 0 1rem;
     position: sticky;
     top: 0;
@@ -44,6 +44,8 @@ header{
 
 .title a{
     text-decoration: none;
+    color: var(--gray-800);
+    font-size: 1.8rem;
 }
 
 .head-content{
@@ -53,40 +55,93 @@ header{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 1.5rem;
+    margin: 3rem 2rem;
+    border: 1px solid var(--gray-400);
+    border-radius: 1rem;
+    background-color: #e6f2ff;
 }
 
 .head-content h2{
-    display: inline-block;
-    width: auto;
-    height: 1rem;
+    margin: 0;
+    font-size: 1.7rem;
 }
 
-.head-btn{
+.head-content p{
+    letter-spacing: 0.08rem;
+}
+
+.search-container {
     margin-top: 1rem;
-}
-.btn-one{
-    
-    padding: 0.4rem 1rem 0.5rem 1rem;
-    margin: 1rem 1rem 1rem 0;
-    border: 1px solid var(--gray-400);
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    padding: 5px;
 }
 
-.btn-two{
-    
-    padding: 0.4rem 1rem 0.5rem 1rem;
-    margin: 1rem 1rem 1rem 0;
-    border: 1px solid var(--gray-400);
-    cursor: pointer;
+#search-bar {
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    padding: 1rem;
+    font-size: 0.9rem;
+    width: 14rem;
+    outline: none;
 }
 
+#search-bar:focus {
+    border-color: var(--gray-500);
+}
+
+#search-button {
+    background-color: var(--gray-500);
+    border: none;
+    border-radius: 0.9rem;
+    color: white;
+    cursor: pointer;
+    padding: 10px 15px;
+    margin-left: 1rem;
+    font-size: 1rem;
+}
+
+#search-button:hover {
+    background-color: var(--gray-700);
+}
+
+.categories-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3.5rem;
+    flex-wrap: wrap;
+    margin: 2rem 0;
+
+}
+
+.category{
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--gray-400);
+    padding: 1rem;
+    border-radius: 0.8rem;
+}
+
+.category i{
+    font-size: 1.8rem;
+}
 @media only screen and (max-width: 768px) {
 
     body{
-        padding: 0 4%;
+        padding: 0;
     }
-   .head-content{
-    align-items: start;
-    text-align: start;
-   }
+
+    .head-content p{
+        letter-spacing: 0.02rem;
+    }
+
+    #search-bar{
+        width: 10rem;
+    }
 }
