--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    background-color: #f5f7f7;
     color: rgba(0, 0, 0, 0.65);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow: auto;
@@ -64,9 +64,9 @@ main{
     text-align: center;
     padding: 1.5rem;
     margin: 3rem 20%;
-    border: 1px solid var(--gray-400);
+    /* border: 1px solid var(--gray-400);
     border-radius: 1rem;
-    background-color: #e6f2ff;
+    background-color: #e6f2ff; */
 }
 
 .head-content h2{
@@ -104,9 +104,9 @@ main{
     border-radius: 0.9rem;
     color: white;
     cursor: pointer;
-    padding: 10px 15px;
+    padding: 11px 15px;
     margin-left: 1rem;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 #search-button:hover {
@@ -138,7 +138,7 @@ main{
     max-height: 340px;
     border: 1px solid var(--gray-100);
     border-radius: 1rem;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 6px 20px;
+    box-shadow: rgba(216, 219, 222, 0.2) 0px 6px 20px;
 }
 
 .post img {
@@ -207,6 +207,8 @@ main{
 
     .head-content{
         margin: 10%;
+        align-items: start;
+        text-align: start;
     }
 
     .head-content p{
