--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     overflow: auto;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4 {
     font-family: "Rubik", sans-serif;
 }
 .header-container{
@@ -38,6 +38,7 @@ h1, h2, h3, h4{
 
 header{
     margin: 0 0.8rem;
+    padding: 0 14%;
 }
 
 .header-items{
@@ -46,15 +47,35 @@ header{
     align-items: center;
 }
 
-.top-icon{
-    margin-right: 0.5rem;
-    color: var(--gray-700);
+
+.header-icons i{
+    color: var(--gray-600);
     cursor: pointer;
+}
+
+.openbtn{
+    display: none;
+}
+
+.closebtn{
+    display: none;
+}
+
+.sidebar{
+    display: flex;
+    gap: 3rem;
+    padding: 0 1rem;
+}
+
+.header-items button i{
+    color: var(--gray-600);
+    cursor: pointer;
+    font-size: 1rem;
 }
 
 .title a{
     text-decoration: none;
-    color: var(--gray-00);
+    color: var(--gray-600);
     font-size: 1.8rem;
 }
 
@@ -71,9 +92,6 @@ main{
     text-align: center;
     padding: 1rem;
     margin: 3rem 10%;
-    /* border: 1px solid var(--gray-400);
-    border-radius: 1rem;
-    background-color: #e6f2ff; */
 }
 
 .head h2{
@@ -252,6 +270,66 @@ main{
     body{
         padding: 0;
     }
+
+    header{
+        padding: 0;
+    }
+
+    .sidebar {
+        flex-direction: column;
+        height: 100%;
+        width: 80%;
+        position: fixed;
+        z-index: 100;
+        top: 0;
+        background-color: #f5f7f7;
+        overflow-x: hidden;
+        padding-top: 60px;
+        transition: 1s linear;
+        
+      }
+
+      #mySidebar{
+        left: -1000px;
+      }
+      
+      .sidebar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+      
+      .sidebar a:hover {
+        color: #f1f1f1;
+      }
+      
+      .sidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+        display: inline-block;
+      }
+      
+      .openbtn {
+        font-size: 20px;
+        cursor: pointer;
+        color: white;
+        padding: 6px 12px;
+        border: none;
+        border-radius: 0.7rem;
+        transition: 0.4s;
+        display: inline-block;
+      }
+      
+      .openbtn:hover {
+        background-color: var(--gray-400);
+      }
+      
 
     .head{
         margin: 10%;
