--- a/style.css
+++ b/style.css
@@ -26,19 +26,15 @@ body{
 h1, h2, h3, h4 {
     font-family: "Rubik", sans-serif;
 }
-.header-container{
+header{
     width: auto;
-    height: 5rem;
-    padding: 0 1rem 0 1rem;
+    height: fit-content;
     position: sticky;
     top: 0;
     background-color: white;
     border-bottom: 1px solid var(--gray-100);
-}
-
-header{
     margin: 0 0.8rem;
-    padding: 0 14%;
+    padding: 0 15%;
 }
 
 .header-items{
@@ -47,25 +43,45 @@ header{
     align-items: center;
 }
 
-
+.header-items h1{
+    margin: 1rem;
+}
+.header-items h1 a{
+    margin-right: 1rem;
+}
 .header-icons i{
     color: var(--gray-600);
     cursor: pointer;
 }
 
+.sidebar {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+  }
+  
+  .sidebar a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    margin-right: 4rem;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+
 .openbtn{
     display: none;
 }
 
-.closebtn{
+.sidebar .closebtn{
     display: none;
 }
 
-.sidebar{
-    display: flex;
-    gap: 3rem;
-    padding: 0 1rem;
-}
 
 .header-items button i{
     color: var(--gray-600);
@@ -272,11 +288,18 @@ main{
     }
 
     header{
-        padding: 0;
+        margin: 0;
+        padding: 0 0 0 6%;
+    }
+
+    .title a{
+        font-size: 1.6rem;
     }
 
     .sidebar {
         flex-direction: column;
+        align-items: start;
+        justify-content: start;
         height: 100%;
         width: 80%;
         position: fixed;
@@ -285,12 +308,12 @@ main{
         background-color: #f5f7f7;
         overflow-x: hidden;
         padding-top: 60px;
-        transition: 1s linear;
+        transition: ease-in-out 2s;
         
       }
 
       #mySidebar{
-        left: -1000px;
+        left: -800px;
       }
       
       .sidebar a {
@@ -307,27 +330,37 @@ main{
       }
       
       .sidebar .closebtn {
+        background-color: #F0F0F0;
+        color: white;
         position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
+        top: 15px;
+        right: 20px;
+        font-size: 26px;
         margin-left: 50px;
-        display: inline-block;
+        display: block;
+        padding: 0 12px 4px 12px;
+        border: none;
+        border-radius: 0.5rem;
+        transition: 0.4s;
       }
       
       .openbtn {
-        font-size: 20px;
         cursor: pointer;
         color: white;
-        padding: 6px 12px;
+        padding:10px 12px 8px;
         border: none;
         border-radius: 0.7rem;
         transition: 0.4s;
-        display: inline-block;
+        display: block;
+        margin-right: 1rem;
       }
       
       .openbtn:hover {
-        background-color: var(--gray-400);
+        background-color: var(--gray-200);
+      }
+
+      .closebtn:hover {
+        background-color: var(--gray-200);
       }
       
 
