--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ header{
     top: 0;
     background-color: white;
     border-bottom: 1px solid var(--gray-100);
-    margin: 0 0.8rem;
-    padding: 0 15%;
+    margin: 0;
+    padding: 0 18%;  
+    box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
 }
 
 .header-items{
@@ -57,17 +58,35 @@ header{
 .sidebar {
     display: flex;
     align-items: center;
-    justify-content: space-around;
 
   }
-  
+.sidebar p{
+    display: none;
+}
+  .nav-list{
+    display: flex;
+  }
+
+  .nav-list li{
+    display: flex;
+    list-style-type: none;
+    
+  }
+  .nav-list li i{
+    display: none;
+  }
+
+  .social{
+    display: none;
+  }
+
   .sidebar a {
     text-decoration: none;
     font-size: 1rem;
     color: #818181;
     display: block;
     transition: 0.3s;
-    margin-right: 4rem;
+    margin-right: 3rem;
   }
   
   .sidebar a:hover {
@@ -107,7 +126,7 @@ main{
     align-items: center;
     text-align: center;
     padding: 1rem;
-    margin: 3rem 10%;
+    margin: 3.4rem 10%;
 }
 
 .head h2{
@@ -298,37 +317,77 @@ main{
 
     .sidebar {
         flex-direction: column;
-        align-items: start;
+        align-items: center;
         justify-content: start;
         height: 100%;
-        width: 80%;
+        width: 100%;
         position: fixed;
         z-index: 100;
         top: 0;
         background-color: #f5f7f7;
         overflow-x: hidden;
-        padding-top: 60px;
         transition: ease-in-out 2s;
         
+      }
+
+      .sidebar p{
+        display: block;
+        text-align: center;
+        font-size: 1.4rem;
+        font-family: "Rubik", sans-serif;
+        font-weight: 600;
+        color: var(--gray-600);
       }
 
       #mySidebar{
         left: -800px;
       }
-      
-      .sidebar a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
+
+      .nav-list{
+        background-color: #F0F0F0;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 1rem;
+        padding: 1.4rem;
+        border-radius: 1rem;
       }
       
-      .sidebar a:hover {
+      .nav-list li{
+        display: flex;
+        align-items: center;
+        border: 1px solid var(--gray-100);
+        width: 40%;
+        margin: 1rem 0.8rem;
+        border-radius: 0.8rem;
+        background-color: #dedede;
+      }
+      
+      .nav-list li i{
+        display: inline-block;
+        font-size: 1rem;
+        color: var(--gray-600);
+        margin: 0.6rem;
+      }
+      
+      .nav-list li a {
+        padding: 8px 2px;
+        text-decoration: none;
+        font-size: 1.1rem;
+        letter-spacing: 0.02rem;
+        color: var(--gray-600);
+        display: block;
+        transition: 0.3s;
+        margin: 0;
+        
+      }
+      
+      .nav-list li a:hover {
         color: #f1f1f1;
       }
       
+      .social{
+        display: block;
+      }
       .sidebar .closebtn {
         background-color: #F0F0F0;
         color: white;
@@ -365,7 +424,7 @@ main{
       
 
     .head{
-        margin: 10%;
+        margin: 12% 9%;
         align-items: start;
         text-align: start;
     }
