--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --gray-900: #001c40;
     --h1: 3rem;
     --h2: 2rem;
+    --first-font: "Rubik", sans-serif;
+    --second-font: "Beiruti", sans-serif;
 }
 
 body{
@@ -18,13 +20,13 @@ body{
     padding: 0;
     background-color: #f5f7f7;
     color: rgba(0, 0, 0, 0.65);
-    font-family: "Beiruti", sans-serif;
+    font-family: var(--second-font);
     font-optical-sizing: auto;
     overflow: auto;
 }
 
 h1, h2, h3, h4 {
-    font-family: "Rubik", sans-serif;
+    font-family: var(--first-font);
 }
 header{
     width: auto;
@@ -65,6 +67,7 @@ header{
 }
   .nav-list{
     display: flex;
+    overflow: hidden;
   }
 
   .nav-list li{
@@ -239,7 +242,7 @@ main{
 .post-info p{
     letter-spacing: 0.02rem;
     font-size: 0.7rem;
-    font-family: "Rubik", sans-serif;
+    font-family: var(--first-font);
 }
 .view-all-post{
     text-decoration: none;
@@ -250,7 +253,7 @@ main{
     background-color: var(--gray-600);
     color: white;
     font-size: 0.8rem;
-    font-family: "Rubik", sans-serif;
+    font-family: var(--first-font);
     letter-spacing: 0.08px;
     font-weight: 500;
 }
@@ -292,7 +295,7 @@ main{
 .cate-name p{
     margin: 0;
     font-size: 0.8rem;
-    font-family: "Rubik", sans-serif;
+    font-family: var(--first-font);
     color: var(--gray-500);
 }
 .category i{
@@ -334,7 +337,7 @@ main{
         display: block;
         text-align: center;
         font-size: 1.4rem;
-        font-family: "Rubik", sans-serif;
+        font-family: var(--first-font);
         font-weight: 600;
         color: var(--gray-600);
       }
@@ -378,7 +381,7 @@ main{
         display: block;
         transition: 0.3s;
         margin: 0;
-        font-family: "Rubik", sans-serif;
+        font-family: var(--first-font);
         
       }
       
@@ -393,7 +396,7 @@ main{
         background-color: var(--gray-100);
         color: white;
         position: absolute;
-        top: 30px;
+        top: 18px;
         right: 20px;
         font-size: 26px;
         margin-left: 50px;
@@ -405,6 +408,7 @@ main{
       }
       
       .openbtn {
+        background-color: var(--gray-100);
         cursor: pointer;
         color: white;
         padding:10px 12px 8px;
@@ -412,7 +416,7 @@ main{
         border-radius: 0.7rem;
         transition: 0.4s;
         display: block;
-        margin-right: 1rem;
+        margin-right: 1.2rem;
       }
       
       .openbtn:hover {
