--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ main{
 .search-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 .error-message {
@@ -481,7 +482,7 @@ main{
 
     .head{
         margin: 12% 9%;
-        align-items: start;
+        align-items: center;
         text-align: start;
     }
 
