--- a/style.css
+++ b/style.css
@@ -235,8 +235,8 @@ main{
             margin: 0.4rem 0.3rem;
             padding: 6px 12px;
             cursor: pointer;
-            border: 1px solid var(--gray-200);
-            border-radius: 0.5rem;
+            border: 1px solid var(--gray-100);
+            border-radius: 1rem;
             background: transparent;
             color: var(--gray-700);
             font-family: var(--first-font);
@@ -247,7 +247,7 @@ main{
         }
         .toast {
             visibility: hidden;
-            max-width: 1000px; 
+            max-width: 200px; 
             margin: auto;
             background-color: var(--gray-700);
             color: white;
@@ -256,9 +256,10 @@ main{
             padding: 14px 18px;
             position: fixed;
             z-index: 100;
-            left: 45%;
+            left: 20%;
+            right: 20%;
             bottom: 30px;
-            font-size: 19px;
+            font-size: 18px;
             white-space: nowrap;
             border-radius: 1rem;
             letter-spacing: 0.02rem;
