--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header{
 
 main{
     width: auto;
-    padding: 0 15%;
+    padding: 0 14%;
     height: 100%;
     
 }
@@ -190,25 +190,26 @@ main{
     justify-content: center;
 }
 
-.posts-main{
-    margin-top:4rem;
-}
 
 .posts{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    padding: 2rem;
+    border: 1px solid var(--gray-50);
+    border-radius: 2rem;
+    margin: 1rem;
 }
 
 .posts p {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 .posts-container{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 
 .post{
@@ -216,11 +217,9 @@ main{
     display: flex;
     flex-direction: column;
     margin: 2rem;
-    max-width: 280px;
-    max-height: 340px;
-    border: 1px solid var(--gray-100);
+    max-width: 250px;
+    max-height: 300px;
     border-radius: 1rem;
-    box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
     }
@@ -230,9 +229,10 @@ main{
         .tag-buttons {
             margin: 10px;
             display: flex;
-            flex-wrap: wrap;
             align-items: center;
-            justify-content: center;
+            overflow: scroll;
+            scrollbar-width: none;
+            max-width: 360px;
         }
         .tag-button {
             margin: 0.4rem 0.3rem;
@@ -261,7 +261,7 @@ main{
             z-index: 100;
             left: 20%;
             right: 20%;
-            bottom: 30px;
+            bottom: 20px;
             font-size: 18px;
             white-space: nowrap;
             border-radius: 1rem;
@@ -274,34 +274,35 @@ main{
         }
         @-webkit-keyframes fadein {
             from {bottom: 0; opacity: 0;} 
-            to {bottom: 30px; opacity: 1;}
+            to {bottom: 20px; opacity: 1;}
         }
         @keyframes fadein {
             from {bottom: 0; opacity: 0;}
-            to {bottom: 30px; opacity: 1;}
+            to {bottom: 20px; opacity: 1;}
         }
         @-webkit-keyframes fadeout {
-            from {bottom: 30px; opacity: 1;} 
+            from {bottom: 20px; opacity: 1;} 
             to {bottom: 0; opacity: 0;}
         }
         @keyframes fadeout {
-            from {bottom: 30px; opacity: 1;}
+            from {bottom: 20px; opacity: 1;}
             to {bottom: 0; opacity: 0;}
         }
 
 .post img {
     width: 100%;
     height: 100%;
-    border-radius: 1rem 1rem 0 0;
+    border-radius: 1rem;
 }
 
 .post h2{
     font-size: 1rem;
     text-align: start;
-    margin: 1rem 0.8rem 0 0.7rem;
+    margin: 1rem 0.8rem 0 0;
     font-weight: 600;
     line-height: 1.4;
     word-spacing: 0.1rem;
+    padding: 0 0.4rem;
     
 }
 
@@ -315,7 +316,7 @@ main{
     justify-content: space-between;
     font-size: 0.8rem;
     color: var(--gray-500);
-    margin: 0.5rem 0.9rem;
+    padding: 0 0.4rem;
 }
 
 .post-info p{
@@ -530,8 +531,16 @@ main{
         width: 10rem;
     }
 
+    .posts{
+        padding: 2rem 0.5rem;
+    }
+
     .post{
-        max-width: 320px;
+        max-width: 350px;
+    }
+
+    .tag-buttons{
+        max-width: 300px;
     }
 
     .toast{
