--- a/posts/style.css
+++ b/posts/style.css
@@ -33,7 +33,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 1.6rem 10%;
+    padding: 1rem;
 }
 
 .title{
@@ -43,17 +43,17 @@
 }
 
 .article-info{
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     color: var(--gray-500);
+    padding: 0 10%;
 }
 
 .article-info i{
-    padding: 10px;
-    background-color: var(--gray-100);
+    padding: 4px;
     border-radius: 20px;
     color: var(--gray-600);
     font-size: 0.7rem;
@@ -81,14 +81,19 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding: 3rem 4rem;
+    padding: 3rem 2rem;
     background-color: white;
     border-radius: 1.4rem;
     margin: 2rem 1rem;
+    box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
+    border: 1px solid var(--gray-50);
 
 }
 .article-main h2{
     text-align: start;
+    color: var(--gray-600);
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 
 .article-main p{
@@ -96,21 +101,34 @@
     word-spacing: 0.08rem;
     line-height: 1.6rem;
     font-size: 1.2rem;
-    margin: 8px;
+    margin: 8px 0;
+    color: var(--gray-500);
 }
 
 .article-main ul{
     margin: 0;
     padding: 0 0.6rem;
+    list-style-type: square;
 }
+
+
 .article-main li{
     letter-spacing: 0.01rem;
     word-spacing: 0.08rem;
     line-height: 1.6rem;
     font-size: 1.2rem;
 }
+.article-main li::marker {
+    color: var(--gray-500);
+  }
 
-.article-img{
+  .article-img{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+.article-img img{
     max-width: 270px;
     max-height: 200px;
     border-radius: 1rem;
@@ -135,7 +153,7 @@
     }
 
     .article-main{
-        padding: 2rem;
+        padding: 2rem 1rem;
     }
 
 
@@ -187,3 +205,4 @@
 .share-btn.facebook { color: #3b5998; }
 .share-btn.twitter { color: #1DA1F2; }
 .share-btn.telegram { color: #0088cc; }
+
