--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #effef7;
+    background-color: #f3f1ff;
     color: rgba(0, 0, 0, 0.65);
     font-family: var(--second-font);
     font-optical-sizing: auto;
