--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 :root{
+    --blue-50: #f3f1ff;
+    --blue-100: #ece9fe;
+    --blue-200: #dcd6fe;
+    --blue-300: #c2b5fd;
+    --blue-400: #a48bfa;
+    --blue-500: #875cf6;
+    --blue-600: #783aed;
+    --blue-700: #6928d9;
+    --blue-800: #5721b6;
+    --blue-900: #491d95;
+    --blue-950: #2c1065;
+
     --gray-50: #f0f1f3;
     --gray-100: #e0e2e8;
     --gray-200: #c3c6d1;
@@ -18,7 +30,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #f3f1ff;
+    background-color: var(--blue-50);
     color: rgba(0, 0, 0, 0.65);
     font-family: var(--second-font);
     font-optical-sizing: auto;
@@ -34,7 +46,15 @@ header{
     position: sticky;
     top: 0;
     margin: 0;
-    padding: 0 18%;  
+    padding: 0 18%; 
+    transition: 1.5s; 
+}
+
+header.scrolled {
+    background-color: white;
+    border-bottom: 1px solid var(--gray-100);
+    box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .header-items{
@@ -159,14 +179,15 @@ main{
     padding: 0.7rem 1rem;
     font-size: 0.9rem;
     outline: none;
+    transition: 1s;
 }
 
 .search-form:focus {
-    border-color: var(--gray-500);
+    border-color: var(--blue-500);
 }
 
 .search-button {
-    background-color: #875cf6;
+    background-color: var(--blue-500);
     border: none;
     border-radius: 0.9rem;
     color: white;
@@ -174,10 +195,11 @@ main{
     padding: 11px 15px;
     margin-left: 1rem;
     font-size: 0.9rem;
+    transition: 1s;
 }
 
 .search-button:hover {
-    background-color: var(--gray-700);
+    background-color: var(--blue-400);
 }
 
 .search-container{
@@ -196,7 +218,7 @@ main{
     padding: 2rem;
     border: 1px solid var(--gray-50);
     border-radius: 2rem;
-    margin: 2rem 1rem;
+    /* margin: 2rem 1rem; */
     box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
 }
 
@@ -241,10 +263,12 @@ main{
             background: transparent;
             color: var(--gray-700);
             font-family: var(--first-font);
+            transition: 1s;
         }
         .tag-button.active {
-            background-color: #875cf6;
+            background-color: var(--blue-500);
             color: white;
+            border: none;
         }
         .toast {
             visibility: hidden;
