--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ main{
       }
       
       .openbtn {
-        background-color: var(--gray-100);
+/*         background-color: var(--gray-100); */
         cursor: pointer;
         color: white;
         padding:10px 12px 8px;
