--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ main{
     background-color: white;
     padding: 2rem;
     border: 1px solid var(--gray-50);
-    border-radius: 2rem;
+    border-radius: 1.4rem;
     margin: 2rem 1rem;
     box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
 }
@@ -374,11 +374,12 @@ main{
 }
 
 .category{
-    width: 6rem;
-    height: 1rem;
+    max-width: 270px;
+    max-height: 250rem;
     display: flex;
-    align-items: center;
-    border: 1px solid var(--gray-200);
+    flex-direction: column;
+    align-items: start;
+    border: 1px solid var(--gray-100);
     padding: 1rem;
     border-radius: 0.8rem;
     background-color: white;
@@ -390,21 +391,29 @@ main{
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding: 0.4rem 0.8rem;
-    border-left: 1px solid var(--gray-200);
+    margin-top: 1rem;
 }
 
-.cate-name p{
+.category h2{
+    font-size: 1.2rem;
+    color: var(--gray-600);
+
+}
+.category p{
     margin: 0;
     font-size: 0.8rem;
     font-family: var(--first-font);
     color: var(--gray-500);
 }
+
 .category i{
     font-size: 1rem;
-    margin-right: 0.6rem;
     color: var(--gray-600);
+    background-color: var(--blue-100);
+    padding: 1rem;
+    border-radius: 1rem;
 }
+
 @media only screen and (max-width: 768px) {
 
     body{
@@ -413,7 +422,7 @@ main{
 
     header{
         margin: 0;
-        padding: 0 0 0 6%;
+        padding: 0 1% 0 6%;
     }
 
     main{
@@ -523,10 +532,11 @@ main{
         transition: 0.4s;
         display: block;
         margin-right: 1.2rem;
+        transition: 1s;
       }
       
       .openbtn:hover {
-        background-color: var(--gray-200);
+        background-color: var(--blue-400);
       }
 
       .closebtn:hover {
