--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -242,6 +242,7 @@ main{
     border-radius: 1rem;
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
+    border: 1px solid var(--gray-100);
     }
         .post.show {
             opacity: 1;
@@ -320,11 +321,11 @@ main{
 .post h2{
     font-size: 1rem;
     text-align: start;
-    margin: 1rem 0.8rem 0 0;
+    margin: 1rem 0;
     font-weight: 600;
     line-height: 1.4;
     word-spacing: 0.1rem;
-    padding: 0 0.4rem;
+    padding: 0 0.8rem;
     
 }
 
@@ -339,6 +340,7 @@ main{
     font-size: 0.8rem;
     color: var(--gray-500);
     padding: 0 0.4rem;
+    margin: 0.6rem;
 }
 
 .post-info p{
