--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -242,7 +242,7 @@ main{
     border-radius: 1rem;
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
-    border: 1px solid var(--gray-100);
+    border: 1px solid var(--blue-100);
     }
         .post.show {
             opacity: 1;
@@ -340,7 +340,7 @@ main{
     font-size: 0.8rem;
     color: var(--gray-500);
     padding: 0 0.4rem;
-    margin: 0.6rem;
+    margin: 0.4rem 0.6rem;
 }
 
 .post-info p{
@@ -349,13 +349,14 @@ main{
     font-family: var(--first-font);
 }
 .view-all-post{
+    background-color: var(--blue-500);
     text-decoration: none;
     margin: 2rem 1rem;
     padding: 0.8rem 1.7rem;
     border-radius: 1rem;
     font-weight: 600;
-    border: 1px solid var(--gray-500);
-    color: var(--gray-600);
+    border: 1px solid var(--gray-100);
+    color: white;
     font-size: 0.8rem;
     font-family: var(--first-font);
     letter-spacing: 0.08px;
