--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -31,7 +31,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: var(--blue-50);
-    color: rgba(0, 0, 0, 0.65);
+    color: var(--gray-600);
     font-family: var(--second-font);
     font-optical-sizing: auto;
     overflow: auto;
@@ -47,6 +47,7 @@ header{
     top: 0;
     margin: 0;
     padding: 0 18%; 
+    z-index: 1000;
     transition: 1.5s; 
 }
 
@@ -130,7 +131,7 @@ header.scrolled {
 
 .title a{
     text-decoration: none;
-    color: var(--gray-600);
+    color: var(--gray-500);
     font-size: 1.8rem;
 }
 
@@ -238,7 +239,7 @@ main{
     flex-direction: column;
     margin: 2rem;
     max-width: 250px;
-    max-height: 300px;
+    max-height: 320px;
     border-radius: 1rem;
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
@@ -548,7 +549,7 @@ footer{
         width: 40%;
         margin: 1rem 0.8rem;
         border-radius: 0.8rem;
-        background-color: #efefef;
+        background-color: var(--blue-100);
       }
       
       .nav-list li i{
@@ -640,6 +641,8 @@ footer{
 
     .post{
         max-width: 370px;
+        margin-left: 1.4rem;
+        margin-right: 1.4rem;
     }
 
     .tag-buttons{
