--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -243,7 +243,6 @@ main{
     border-radius: 1rem;
     opacity: 0;
     transition: opacity 0.7s ease-in-out;
-    border: 1px solid var(--blue-100);
     }
         .post.show {
             opacity: 1;
@@ -383,7 +382,7 @@ main{
     flex-direction: column;
     padding: 1rem;
     background-color: white;
-    border-radius: 1rem;
+    border-radius: 1.2rem;
     box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
     border: 1px solid var(--gray-50);
 }
@@ -391,7 +390,7 @@ main{
 .trending-box h2{
     font-size: 1.2rem;
     text-align: start;
-    border-bottom: 1px solid var(--gray-400);
+    border-bottom: 1px solid var(--gray-200);
     padding-bottom: 1rem;
     text-align: center;
 }
@@ -412,8 +411,8 @@ main{
 .trending-item h3{
     font-size: 15px;
     text-align: start;
-    padding: 0 1.5rem;
-    line-height: 1.4rem;
+    padding: 0 0 0 1.5rem;
+    line-height: 1.6rem;
 }
 
 .trending-item h3 a{
