--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -37,6 +37,10 @@ body{
     overflow: auto;
 }
 
+a:hover{
+    transition: 1s;
+    color: var(--blue-600);
+}
 h1, h2, h3, h4 {
     font-family: var(--first-font);
 }
@@ -106,12 +110,13 @@ header.scrolled {
     font-size: 1rem;
     color: #818181;
     display: block;
-    transition: 0.3s;
+    transition: 1s;
     margin-right: 3rem;
   }
   
   .sidebar a:hover {
-    color: #f1f1f1;
+    color: var(--gray-800);
+    border-bottom: 1px solid var(--gray-100);
   }
 
 .openbtn{
@@ -669,7 +674,7 @@ footer{
         width: 40%;
         margin: 1rem 0.8rem;
         border-radius: 0.8rem;
-        background-color: var(--blue-100);
+        background-color: #efefef;
       }
       
       .nav-list li i{
@@ -693,7 +698,7 @@ footer{
       }
       
       .nav-list li a:hover {
-        color: #f1f1f1;
+        color:var(--blue-700);
       }
       
       .social{
@@ -711,7 +716,7 @@ footer{
         padding: 0 12px 4px 12px;
         border: none;
         border-radius: 0.5rem;
-        transition: 0.4s;
+        transition: 1s;
       }
       
       .openbtn {
@@ -732,7 +737,7 @@ footer{
       }
 
       .closebtn:hover {
-        background-color: var(--gray-200);
+        background-color: var(--blue-400);
       }
       
 
@@ -789,6 +794,10 @@ footer{
         flex-direction: column;
     }
 
+    .github-link{
+        display: none;
+    }
+
     footer{
         padding: 0;
         padding-bottom: 0.4rem;
@@ -812,4 +821,14 @@ footer{
         justify-content: space-between;
     }
 }
+
+.inz-fade {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.inz-fade.visible {
+    opacity: 1;
+}
+
 
