--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -370,8 +370,6 @@ main{
 
 .trending{
     padding: 5%;
-    margin-bottom: 2rem;
-    overflow: hidden;
 }
 
 .trending-container{
@@ -417,7 +415,7 @@ main{
 .trending-item h3{
     font-size: 15px;
     text-align: start;
-    padding: 0 0 0 1.5rem;
+    padding: 0 2rem;
     line-height: 1.6rem;
     font-weight: 500;
 }
@@ -445,6 +443,7 @@ main{
     justify-content: center;
     flex-wrap: wrap;
     gap: 2rem;
+    padding: 1.4rem;
 }
 
 .language {
@@ -463,7 +462,7 @@ main{
 }
 
 .language h3{
-    font-size: 1rem;
+    font-size: 15px;
     font-weight: 500;
 }
 
@@ -484,7 +483,6 @@ main{
 }
 .show-more-container {
     text-align: center;
-    margin-top: 20px;
 }
 
 .show-more{
@@ -505,7 +503,7 @@ main{
 
 @media (max-width: 768px) {
     .language-container .language {
-        flex: 1 0 calc(80% - 10px); /* Two items per row on mobile */
+        flex: 1 0 calc(30% - 10px); /* Two items per row on mobile */
     }
 }
 
