--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -127,21 +127,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
 }
 
-.button{
-    margin-right: 1em;
-    margin: 1.34em 0;
-    padding: .667em 2em;
-    border: 1px solid var(--blue-300);
-    border-radius: 30px;
-    background-color: var(--blue-100);
-    color: var(--gray-600);
-    text-decoration: none!important;
-    font-size: .888em!important;
-    word-spacing: .04em;
+.article-button{
+    margin: 1em;
+    margin-bottom: 0.8rem;
+    padding: 10px 1rem;
+    font-size: 1rem;
+    color: var(--blue-500);
+    border-radius: 1rem;
+    border: 1px solid var(--blue-500);
+    text-decoration: none;
+    word-spacing: 0.1rem;
+    transition: 0.5s;
     cursor: pointer;
+}
+
+.article-button:hover{
+    background-color: var(--blue-200);
+    color: var(--gray-700);
+}
+
+.article-button i{
+    font-size: 0.7rem;
 }
 
 @media only screen and (max-width: 768px) {
