--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -354,6 +354,14 @@ main{
             to {bottom: 0; opacity: 0;}
         }
 
+.filter-message {
+    font-size: .8rem;
+    margin-bottom: 10px;
+    color: var(--gray-700);
+    text-align: center;
+    font-family: var(--first-font);
+}
+        
 .post img {
     width: 100%;
     height: 100%;
