--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -803,12 +803,12 @@ footer{
 
     header{
         top: 10px;
-        margin: 10px;
         padding: 0 1% 0 6%;
     }
 
     header.scrolled {
         border-radius: 1rem;
+        margin: 1rem;
     }
 
     main{
