--- a/assets/css/primary.css
+++ b/assets/css/primary.css
@@ -23,6 +23,8 @@
     --gray-900: #001c40;
     --h1: 3rem;
     --h2: 2rem;
+
+    --bg-color:#f5f5f7;
     --first-font: "Rubik", sans-serif;
     --second-font: "Beiruti", sans-serif;
 }
@@ -30,7 +32,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: var(--blue-50);
+    background-color: var(--bg-color);
     color: var(--gray-600);
     font-family: var(--second-font);
     font-optical-sizing: auto;
@@ -793,8 +795,6 @@ footer{
     color: var(--gray-400);
     word-spacing: 2px;
 }
-
-
 @media only screen and (max-width: 768px) {
 
     body{
@@ -802,13 +802,8 @@ footer{
     }
 
     header{
-        top: 10px;
+        margin: 0;
         padding: 0 1% 0 6%;
-    }
-
-    header.scrolled {
-        border-radius: 1rem;
-        margin: 1rem;
     }
 
     main{
